--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,8 +18,9 @@
     under the License.
 -->
 <html>
-    <head>
-        <!--
+
+<head>
+    <!--
         Customize this policy to fit your own app's needs. For more guidance, see:
             https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
         Some notes:
@@ -28,28 +29,48 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet"type="text/css" href="bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet"type="text/css" href="css/index.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script type="text/javascript" charset="utf-8">
+        function onLoad() {
+            document.addEventListener("deviceready", onDeviceReady, true);
+        }
 
-        <title>Guess what ?</title>
-    </head>
-    <body style="background-color: #eaeaea;">
-        <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-          <section>
+        function exitFromApp() {
+            navigator.app.exitApp();
+        }
+    </script>
+
+    <title>Guess what ?</title>
+</head>
+
+<body style="background-color: #eaeaea;" onload="onLoad();">
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
+        <section>
             <article class="animation-move-up-and-down">
-              <h1 class="dipslay-1 m-0 text-center">GUESS WHAT ?</h1>
-              <p class="lead mb-5 text-muted text-right">the game...</p>
+                <h1 class="dipslay-1 m-0 text-center">GUESS WHAT ?</h1>
+                <p class="lead mb-5 text-muted text-right">the game...</p>
             </article>
             <footer class="text-center">
-              <a type="button" class="btn btn-outline-primary btn-lg px-5" role="button" href="index2.html" style="border-radius: 50px;">Start!</a>
+                <form method="get" action="/index2.html" class="mb-3">
+                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block" style="border-radius: 50px;">Start!</button>
+                </form>
+
+                <form method="get" action="/index3.html" class="mb-3">
+                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block" style="border-radius: 50px;">About Us</button>
+                </form>
+
+                <button class="btn btn-outline-primary btn-lg btn-block" style="border-radius: 50px;" onclick="exitFromApp()">Exit</button>
             </footer>
-          </section>
-        </div>
-        <script type="text/javascript" src="bootstrap/dist/js/bootstrap.js"></script>
-        <script type="text/javascript" src="cordova.js"></script>
-    </body>
+        </section>
+    </div>
+    <script type="text/javascript" src="bootstrap/dist/js/bootstrap.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+</body>
+
 </html>
