update about us page

--- a/platforms/browser/www/index2.html
+++ b/platforms/browser/www/index2.html
@@ -42,6 +42,7 @@
 <body style="background-color: #eaeaea;">
   <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
     <section>
+
       <section id="count-container">
         <div id="count-down" class="display-1"></div>
       </section>
@@ -55,9 +56,15 @@
             <small id="emailHelp" class="form-text text-muted text-center">Enter the answer with no gap.</small>
           </div>
           <div class="form-group text-center">
-            <button type="button" class="btn btn-outline-primary btn-lg" id="submit" style="border-radius: 50px;">Check</button>
+            <button type="button" class="btn btn-outline-primary btn-lg btn-block" id="submit" style="border-radius: 50px;">Check</button>
           </div>
         </form>
+
+        <section>
+          <form method="get" action="/index.html" class="mb-3">
+              <button type="submit" class="btn btn-outline-danger btn-lg btn-block" style="border-radius: 50px;">Back</button>
+          </form>
+        </section>
       </section>
     </section>
   </div>
