--- a/www/index3.html
+++ b/www/index3.html
@@ -40,9 +40,34 @@
 </head>
 
 <body style="background-color: #eaeaea;">
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
+    <section>
+      <section class="d-flex justify-content-between align-items-center mb-4">
+        <form method="get" action="/index.html" class="mb-3">
+            <button type="submit" class="btn btn-outline-danger" style="border-radius: 50px;">&#x21B6;</button>
+        </form>
+
+        <header class="mx-5">
+          <h2>About Us.</h1>
+        </header>
+
+        <article>
+          <p class="m-0 text-muted">V 0.0.1</p>
+        </article>
+
+      </section>
+
+      <section class="container">
+        <div class="row">
+          <div class="col">
+            <p class="lead text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+          </div>
+        </div>
+      </section>
+    </section>
+  </div>
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
