--- a/platforms/browser/www/index2.html
+++ b/platforms/browser/www/index2.html
@@ -34,7 +34,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
   <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
   <title>Guess what ?</title>
 </head>
@@ -70,7 +70,7 @@
   </div>
   <script type="text/javascript" src="bootstrap/dist/js/bootstrap.js"></script>
   <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="assets/js/index.js"></script>
   <script type="text/javascript" src="lib/index.js"></script>
 </body>
 
