--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <script type="text/javascript" charset="utf-8">
         function exitFromApp() {
             navigator.app.exitApp();
@@ -45,7 +45,21 @@
 
 <body style="background-color: #eaeaea;">
     <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-        <section>
+        <section id="form">
+          <article class="animation-move-up-and-down">
+              <h1 class="dipslay-1 m-0 text-center">GUESS WHAT ?</h1>
+              <p class="lead mb-5 text-muted text-right">the game...</p>
+          </article>
+
+          <form class="text-center">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required="" autofocus="">
+            <input type="password" id="inputPassword" class="form-control mb-3" placeholder="Password" required="">
+            <button class="btn btn-lg btn-primary btn-block" type="submit" id="submit" style="border-radius: 50px;">Sign in</button>
+          </form>
+        </section>
+
+        <section id="option" class="d-none">
             <article class="animation-move-up-and-down">
                 <h1 class="dipslay-1 m-0 text-center">GUESS WHAT ?</h1>
                 <p class="lead mb-5 text-muted text-right">the game...</p>
@@ -65,7 +79,8 @@
     </div>
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-      <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
+    <script type="text/javascript" src="lib/CheckLogin.js"></script>
 </body>
 
 </html>
